Only build docs when FFTX_MAKE_DOCS is defined

--- a/.github/workflows/build-sphinx.yml
+++ b/.github/workflows/build-sphinx.yml
@@ -90,7 +90,7 @@ jobs:
         echo $PATH
         cd $SPIRAL_HOME/../fftx
         mkdir build && cd build
-        cmake ..
+        cmake -DFFTX_MAKE_DOCS=True ..
         make Sphinx
         "../docs/buildsite.sh"
       shell: bash
