--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,21 +96,30 @@ endif ()
 add_subdirectory ( src )
 add_subdirectory ( examples )
 
-##  Add the CMakeIncludes folder so the FindSphinx module is found
-set ( CMAKE_MODULE_PATH "${FFTX_PROJECT_SOURCE_DIR}/CMakeIncludes" ${CMAKE_MODULE_PATH} )
+##  We will only build the documentation if the following conditions are satisfied:
+##    FFTX_MAKE_DOCS is defined when cmake is invoked (e.g., cmake -DFFTX_MAKE_DOCS=True ..)
+##    Sphinx is installed (also breathe & sp[hinx_rtd_theme)
+##    Doxygen is installed
 
-find_package ( Sphinx )		##  don't make it REQUIRED; skip docs if not found
-if ( ${Sphinx_FOUND} )
-    ##  Check for Doxygen -- also required to build docs 
-    find_package ( Doxygen )	##  don't make it REQUIRED; skip docs if not found
-    if ( ${Doxygen_FOUND} )
-	message ( STATUS "Found Sphinx & Doxygen, add subdirectory 'docs' to build documentation" )
-	add_subdirectory (docs)
-    else ()
-	message ( STATUS "Sphinx found, Doxygen not found -- skipping 'docs'" )
-    endif ()
+if ( "X${FFTX_MAKE_DOCS}X" STREQUAL "XX" OR NOT FFTX_MAKE_DOCS )
+    message ( STATUS "FFTX_MAKE_DOCS is not defined, do NOT build documentation" )
 else ()
-    message ( STATUS "Sphinx not found -- skipping 'docs', do NOT build documentation" )
+    ##  Add the CMakeIncludes folder so the FindSphinx module is found
+    set ( CMAKE_MODULE_PATH "${SPIRAL_SOURCE_DIR}/config/CMakeIncludes" ${CMAKE_MODULE_PATH} )
+
+    find_package ( Sphinx )		##  don't make it REQUIRED; skip docs if not found
+    if ( ${Sphinx_FOUND} )
+	##  Check for Doxygen -- also required to build docs 
+	find_package ( Doxygen )	##  don't make it REQUIRED; skip docs if not found
+	if ( ${Doxygen_FOUND} )
+	    message ( STATUS "Found Sphinx & Doxygen, add subdirectory 'docs' to build documentation" )
+	    add_subdirectory (docs)
+	else ()
+	    message ( STATUS "Sphinx found, Doxygen not found -- skipping 'docs'" )
+	endif ()
+    else ()
+	message ( STATUS "Sphinx not found -- skipping 'docs', do NOT build documentation" )
+    endif ()
 endif ()
 
 enable_testing()
