--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -21,3 +21,4 @@ manage_add_subdir ( hockney       TRUE      FALSE )
 manage_add_subdir ( rconv         TRUE      TRUE )
 manage_add_subdir ( verify        TRUE      TRUE )
 manage_add_subdir ( warpx         TRUE      FALSE )
+manage_add_subdir ( compare_cufft TRUE      TRUE )
