--- a/examples/warpx/CMakeLists.txt
+++ b/examples/warpx/CMakeLists.txt
@@ -5,38 +5,23 @@
 ## See LICENSE file for full information
 ##
 
+include ( ../ExamplesCommon.cmake )
+
 cmake_minimum_required ( VERSION ${CMAKE_MINIMUM_REQUIRED_VERSION} )
 
-##  _codegen specifies CPU or GPU (serial or CUDA) code generation.  Will be set
-##  in parent so don't change here.
-
-if ( ${_codegen} STREQUAL "GPU" )
-    set ( _lang_add LANGUAGES CUDA )
-endif ()
+##  ===== For most examples you should not need to modify anything ABOVE this line =====
 
 ##  Set the project name.  Preferred name is just the *name* of the example folder 
-project ( warpx ${_lang_add} )
+project ( warpx ${_lang_add} ${_lang_base} )
 
-##  File nameing convention is: <prefix>.<stem>.xxxxx; set _stem and _prefix(es)
+##  File naming convention is: <prefix>.<stem>.xxxxx; set _stem and _prefix(es)
 ##  Test program name is:  test<project name>.{cpp|cu}
 
 set ( _stem fftx )
 set ( _prefixes warpx )
 set ( BUILD_PROGRAM test${PROJECT_NAME} )
 
-##  ===== For most examples you should not need to modify anything below this line =====
+##  ===== For most examples you should not need to modify anything BELOW this line =====
 
 manage_deps_codegen ( ${_codegen} ${_stem} "${_prefixes}" )
-list ( APPEND _all_build_srcs ${BUILD_PROGRAM}.${_suffix} )
-
-add_executable   ( ${BUILD_PROGRAM} ${_all_build_srcs} )
-add_dependencies ( ${BUILD_PROGRAM} ${_all_build_deps} )
-
-target_compile_options ( ${BUILD_PROGRAM} PRIVATE ${ADDL_COMPILE_FLAGS} )
-
-target_include_directories ( ${BUILD_PROGRAM} PRIVATE ${${PROJECT_NAME}_BINARY_DIR} ${CMAKE_BINARY_DIR} . )
-
-set ( INSTALL_DIR_TARGET ${CMAKE_BINARY_DIR}/bin )
-
-install ( TARGETS ${BUILD_PROGRAM} DESTINATION ${INSTALL_DIR_TARGET} )
-
+add_includes_libs_to_target ( ${BUILD_PROGRAM} ${_stem} "${_prefixes}" )
