Updated example to work with cmakefile structure.

--- a/examples/rconv/CMakeLists.txt
+++ b/examples/rconv/CMakeLists.txt
@@ -12,16 +12,22 @@ cmake_minimum_required ( VERSION ${CMAKE_MINIMUM_REQUIRED_VERSION} )
 ##  ===== For most examples you should not need to modify anything ABOVE this line =====
 
 ##  Set the project name.  Preferred name is just the *name* of the example folder 
-project ( rconv ${_lang_add} ${_lang_base} )
+project ( compare ${_lang_add} ${_lang_base} )
 
-##  File naming convention is: <prefix>.<stem>.xxxxx; set _stem and _prefix(es)
 ##  Test program name is:  test<project name>.{cpp|cu}
 
 set ( _stem fftx )
-set ( _prefixes rconv3 )
-set ( BUILD_PROGRAM test${PROJECT_NAME} )
+set ( _prefixes )
+set ( BUILD_PROGS testrconv )
 
 ##  ===== For most examples you should not need to modify anything BELOW this line =====
 
-manage_deps_codegen ( ${_codegen} ${_stem} "${_prefixes}" )
-add_includes_libs_to_target ( ${BUILD_PROGRAM} ${_stem} "${_prefixes}" )
+message ( STATUS "${BUILD_PROGRAM}: Library include dirs = ${_library_includes}" )
+message ( STATUS "${BUILD_PROGRAM}: Library names = ${_library_names}" )
+
+foreach ( _prog ${BUILD_PROGS} )
+    ##  Build the dependencies and get the include directories / libraries for each program
+    manage_deps_codegen ( ${_codegen} ${_stem} "${_prefixes}" )
+    add_includes_libs_to_target ( ${_prog} ${_stem} "${_prefixes}" )
+endforeach ()
+
