Changes for libraries and finding/building MPI

--- a/examples/MPI/3DFFT/CMakeLists.txt
+++ b/examples/MPI/3DFFT/CMakeLists.txt
@@ -65,7 +65,7 @@ else ()
     message ( STATUS "Run custom command to build '${BUILD_PROGRAM}'" )
     include ( FindUnixCommands )
     add_custom_command ( OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${BUILD_PROGRAM}
-	COMMAND ${BASH} -c "${MPI_CXX_COMPILER} -D__FILEROOT__=${_prefixes} -I${${PROJECT_NAME}_BINARY_DIR} -I${${PROJECT_NAME}_SOURCE_DIR} -I${${PROJECT_NAME}_SOURCE_DIR}/../common -I${SPIRAL_CUDA_INCLUDE_DIRS} -I${MPI_CXX_INCLUDE_DIRS} -I${CMAKE_BINARY_DIR} -std=c++11 -o ${CMAKE_CURRENT_BINARY_DIR}/${BUILD_PROGRAM} ${${PROJECT_NAME}_SOURCE_DIR}/${BUILD_PROGRAM}.cpp ${MPI_CXX_LIB0} ${MPI_CXX_LIB1} -L ${SPIRAL_CUDA_LIBRARIES} -lcudart -L${${PROJECT_NAME}_BINARY_DIR} -l${_libname}" 
+	COMMAND ${BASH} -c "${MPI_CXX_COMPILER} -D__FILEROOT__=${_prefixes} -I${${PROJECT_NAME}_BINARY_DIR} -I${${PROJECT_NAME}_SOURCE_DIR} -I${${PROJECT_NAME}_SOURCE_DIR}/../common -I${SPIRAL_CUDA_INCLUDE_DIRS} -I${MPI_CXX_INCL0} -I${MPI_CXX_INCL1} -I${CMAKE_BINARY_DIR} -std=c++11 -o ${CMAKE_CURRENT_BINARY_DIR}/${BUILD_PROGRAM} ${${PROJECT_NAME}_SOURCE_DIR}/${BUILD_PROGRAM}.cpp ${MPI_CXX_LIB0} ${MPI_CXX_LIB1} -L ${SPIRAL_CUDA_LIBRARIES} -lcudart -L${${PROJECT_NAME}_BINARY_DIR} -l${_libname}" 
 	DEPENDS ${_libname}
 	VERBATIM
 	COMMENT "Generating ${BUILD_PROGRAM}" )
