Allow code gen for CPU

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -17,7 +17,7 @@ project ( examples )
 ##                  subdir name   CPU       GPU
 
 set ( _library_includes library)
-manage_add_subdir ( library       FALSE     TRUE )
+manage_add_subdir ( library       TRUE      TRUE )
 
 message ( STATUS "Library include dirs = ${_library_includes}" )
 message ( STATUS "Library names = ${_library_names}" )
