--- a/examples/MPI/3DFFT/CMakeLists.txt
+++ b/examples/MPI/3DFFT/CMakeLists.txt
@@ -85,7 +85,7 @@ endif ()
 
 add_custom_target ( build_mpiexample ALL DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/${BUILD_PROGRAM} )
 
-set ( INSTALL_DIR_TARGET ${CMAKE_BINARY_DIR}/bin )
+set ( INSTALL_DIR_TARGET ${CMAKE_INSTALL_PREFIX}/bin )
 
 install ( PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/${BUILD_PROGRAM} DESTINATION ${INSTALL_DIR_TARGET} )
 
