--- a/examples/rconv/CMakeLists.txt
+++ b/examples/rconv/CMakeLists.txt
@@ -26,6 +26,13 @@ set ( BUILD_PROGRAM test${PROJECT_NAME} )
 manage_deps_codegen ( ${_codegen} ${_stem} "${_prefixes}" )
 add_includes_libs_to_target ( ${BUILD_PROGRAM} ${_stem} "${_prefixes}" )
 
-##  Hack needed so that we find the local rconv.h first (the perils of having
-##  multiple include files named the same across different directories)
-target_include_directories ( ${BUILD_PROGRAM} BEFORE PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} )
+## Now for the version with _lib suffix.
+
+set ( BUILD_PROG_LIB test${PROJECT_NAME}_lib )
+set ( _prefixes_lib )
+
+message ( STATUS "${BUILD_PROG_LIB}: Library include dirs = ${_library_includes}" )
+message ( STATUS "${BUILD_PROG_LIB}: Library names = ${_library_names}" )
+
+manage_deps_codegen ( ${_codegen} ${_stem} "${_prefixes_lib}" )
+add_includes_libs_to_target ( ${BUILD_PROG_LIB} ${_stem} "${_prefixes_lib}" )
