--- a/examples/verify/CMakeLists.txt
+++ b/examples/verify/CMakeLists.txt
@@ -25,3 +25,14 @@ set ( BUILD_PROGRAM test${PROJECT_NAME} )
 
 manage_deps_codegen ( ${_codegen} ${_stem} "${_prefixes}" )
 add_includes_libs_to_target ( ${BUILD_PROGRAM} ${_stem} "${_prefixes}" )
+
+## Now for the version with _lib suffix.
+
+set ( BUILD_PROG_LIB test${PROJECT_NAME}_lib )
+set ( _prefixes_lib )
+
+message ( STATUS "${BUILD_PROG_LIB}: Library include dirs = ${_library_includes}" )
+message ( STATUS "${BUILD_PROG_LIB}: Library names = ${_library_names}" )
+
+manage_deps_codegen ( ${_codegen} ${_stem} "${_prefixes_lib}" )
+add_includes_libs_to_target ( ${BUILD_PROG_LIB} ${_stem} "${_prefixes_lib}" )
