Update READMME comments on building FFTX; don't build rconv

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -29,7 +29,8 @@ manage_add_subdir ( compare       FALSE     TRUE )
 
 manage_add_subdir ( mddft         TRUE      TRUE )
 manage_add_subdir ( hockney       TRUE      FALSE )
-manage_add_subdir ( rconv         TRUE      TRUE )
+##  Don't build rconv -- still in development
+##  manage_add_subdir ( rconv         TRUE      TRUE )
 manage_add_subdir ( verify        TRUE      TRUE )
 manage_add_subdir ( warpx         TRUE      FALSE )
 ##  manage_add_subdir ( warpx_basic   FALSE     TRUE )
