plugging memory leak

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -32,7 +32,7 @@ manage_add_subdir ( hockney       TRUE      FALSE )
 ##  Don't build rconv -- still in development
 ##  manage_add_subdir ( rconv         TRUE      TRUE )
 manage_add_subdir ( verify        TRUE      TRUE )
-manage_add_subdir ( warpx         TRUE      FALSE )
+manage_add_subdir ( warpx         FALSE     FALSE )
 ##  manage_add_subdir ( warpx_basic   FALSE     TRUE )
 manage_add_subdir ( compare_cufft FALSE     TRUE )
 
