--- a/examples/verify/CMakeLists.txt
+++ b/examples/verify/CMakeLists.txt
@@ -21,10 +21,14 @@ set ( _stem fftx )
 set ( _prefixes mddft3 imddft3 prdft3 iprdft3 )
 set ( BUILD_PROGRAM test${PROJECT_NAME} )
 
+set ( _prefixes_device )
+set ( BUILD_PROGRAM_DEVICE test${PROJECT_NAME}_device )
+
 ##  ===== For most examples you should not need to modify anything BELOW this line =====
 
 manage_deps_codegen ( ${_codegen} ${_stem} "${_prefixes}" )
 add_includes_libs_to_target ( ${BUILD_PROGRAM} ${_stem} "${_prefixes}" )
+add_includes_libs_to_target ( ${BUILD_PROGRAM_DEVICE} ${_stem} "${_prefixes_device}" )
 
 ## Now for the version with _lib suffix.
 
