--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,11 +45,11 @@ if ( APPLE )
     message ( STATUS "Running on Apple / MAC" )
     message ( STATUS "CMAKE_OSX_ARCHITECTURES = ${CMAKE_OSX_ARCHITECTURES}" )
     message ( STATUS "CMAKE_SYSTEM_PROCESSOR = ${CMAKE_SYSTEM_PROCESSOR}" )
-    if ( ${CMAKE_OSX_ARCHITECTURES} MATCHES "x86_64" OR ${CMAKE_SYSTEM_PROCESSOR} MATCHES "x86_64.*")
-	set ( ADDL_COMPILE_FLAGS -arch x86_64 )
-        message ( STATUS "Set addl compile flags: ${ADDL_COMPILE_FLAGS}" )
-    elseif ( ${CMAKE_OSX_ARCHITECTURES} MATCHES "arm64" OR ${CMAKE_SYSTEM_PROCESSOR} MATCHES "aarch64.*" )
+    if ( ${CMAKE_OSX_ARCHITECTURES} MATCHES "arm64" OR ${CMAKE_SYSTEM_PROCESSOR} MATCHES "aarch64.*" )
 	set ( ADDL_COMPILE_FLAGS -arch arm64 )
+        message ( STATUS "Set addl compile flags: ${ADDL_COMPILE_FLAGS}" )
+    elseif ( ${CMAKE_OSX_ARCHITECTURES} MATCHES "x86_64" OR ${CMAKE_SYSTEM_PROCESSOR} MATCHES "x86_64.*")
+	set ( ADDL_COMPILE_FLAGS -arch x86_64 )
         message ( STATUS " set addl compile flags: ${ADDL_COMPILE_FLAGS}" )
     endif ()
 endif ()	
