Refactor FFTX directory structure, permit source tree to be removed after install

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -17,13 +17,13 @@ project ( examples )
 
 ##                  subdir name   CPU       GPU
 
-set ( _library_includes library)
-manage_add_subdir ( library       TRUE      TRUE )
+# set ( _library_includes library)
+# manage_add_subdir ( library       TRUE      TRUE )
 
-message ( STATUS "Library include dirs = ${_library_includes}" )
-message ( STATUS "Library names = ${_library_names}" )
+# message ( STATUS "Library include dirs = ${_library_includes}" )
+# message ( STATUS "Library names = ${_library_names}" )
 
-include_directories ( ${_library_includes} )
+# include_directories ( ${_library_includes} )
 
 manage_add_subdir ( compare       FALSE     TRUE )
 
