--- a/examples/compare/CMakeLists.txt
+++ b/examples/compare/CMakeLists.txt
@@ -22,8 +22,8 @@ set ( BUILD_PROGS testcompare_device testconstant testimpulse )
 
 ##  ===== For most examples you should not need to modify anything BELOW this line =====
 
-message ( STATUS "${BUILD_PROGS}: Library include dirs = ${_library_includes}" )
-message ( STATUS "${BUILD_PROGS}: Library names = ${_library_names}" )
+##  message ( STATUS "${BUILD_PROGS}: Library include dirs = ${_library_includes}" )
+##  message ( STATUS "${BUILD_PROGS}: Library names = ${_library_names}" )
 
 foreach ( _prog ${BUILD_PROGS} )
     ##  Build the dependencies and get the include directories / libraries for each program
