--- a/examples/3DDFT_mpi/CMakeLists.txt
+++ b/examples/3DDFT_mpi/CMakeLists.txt
@@ -19,21 +19,25 @@ project ( 3DDFT_mpi ${_lang_add} ${_lang_base} )
 
 set ( _stem fftx )
 set ( _prefixes )
-set ( BUILD_PROGRAM test${PROJECT_NAME} )
+set ( BUILD_PROGS test${PROJECT_NAME} test${PROJECT_NAME}_embedded )
 
 ##  One .cu file is coded with device_macros and should build for CUDA & HIP
 set ( _desired_suffix cu )
-if ( ${_codegen} STREQUAL "HIP" )
-    set_source_files_properties ( ${BUILD_PROGRAM}.${_desired_suffix} PROPERTIES LANGUAGE CXX )
-    list ( APPEND ADDL_COMPILE_FLAGS -DFFTX_HIP )
-elseif ( ${_codegen} STREQUAL "CUDA" )
-    set_source_files_properties ( ${BUILD_PROGRAM}.${_desired_suffix} PROPERTIES LANGUAGE CUDA )
-    list ( APPEND ADDL_COMPILE_FLAGS -DFFTX_CUDA )
-endif ()
+foreach ( _prog ${BUILD_PROGS} )
+    if ( ${_codegen} STREQUAL "HIP" )
+	set_source_files_properties ( ${_prog}.${_desired_suffix} PROPERTIES LANGUAGE CXX )
+	list ( APPEND ADDL_COMPILE_FLAGS -DFFTX_HIP )
+    elseif ( ${_codegen} STREQUAL "CUDA" )
+	set_source_files_properties ( ${_prog}.${_desired_suffix} PROPERTIES LANGUAGE CUDA )
+	list ( APPEND ADDL_COMPILE_FLAGS -DFFTX_CUDA )
+    endif ()
+endforeach ()
 
 ##  ===== For most examples you should not need to modify anything BELOW this line =====
 
-manage_deps_codegen ( ${_codegen} ${_stem} "${_prefixes}" )
-add_includes_libs_to_target ( ${BUILD_PROGRAM} ${_stem} "${_prefixes}" )
-add_mpi_decorations_to_target ( ${BUILD_PROGRAM} )
-
+foreach ( _prog ${BUILD_PROGS} )
+    ##  Build the dependencies and get the include directories / libraries for each program
+    manage_deps_codegen ( ${_codegen} ${_stem} "${_prefixes}" )
+    add_includes_libs_to_target ( ${_prog} ${_stem} "${_prefixes}" )
+    add_mpi_decorations_to_target ( ${_prog} )
+endforeach ()
