--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -23,6 +23,7 @@ include ( CMakeDependentOption )
 cmake_dependent_option ( BLD_COMPARE_EX "Build compare example" ON "MDDFT_LIB;PRMDDFT_LIB" OFF )
 cmake_dependent_option ( BLD_RCONV_EX "Build rconv example" ON "RCONV_LIB" OFF )
 cmake_dependent_option ( BLD_VERIFY_EX "Build verify example" ON "MDDFT_LIB;PRMDDFT_LIB" OFF )
+cmake_dependent_option ( BLD_DISTDFT_MPI_EX "Build distributed DFT MPI example" ON "DISTDFT_LIB" OFF )
 
 ##                  subdir name   CPU       GPU
 
@@ -47,11 +48,11 @@ manage_add_subdir ( compare_cufft FALSE     TRUE )
 
 ##  MPI examples depend on MPI being installed & accessable
 ##  Looked for MPI at top level CMake
-##  find_package ( MPI COMPONENTS MPICXX )
 if ( ${MPI_FOUND} )
     ##  MPI installation found
-    ##  setup_mpi_variables ()
-    manage_add_subdir ( 3DDFT_mpi     FALSE     TRUE )
+    if ( BLD_DISTDFT_MPI_EX )
+	manage_add_subdir ( 3DDFT_mpi     FALSE     TRUE )
+    endif ()
 else ()
     message ( STATUS "MPI NOT found: No MPI examples will be built" )
 endif ()
