--- a/examples/mddft/CMakeLists.txt
+++ b/examples/mddft/CMakeLists.txt
@@ -22,6 +22,6 @@ set ( _prefixes mddft imddft )
 set ( BUILD_PROGRAM test${PROJECT_NAME} )
 
 ##  ===== For most examples you should not need to modify anything BELOW this line =====
-
+LIST (APPEND LIBS_FOR_CUDA nvrtc )
 manage_deps_codegen ( ${_codegen} ${_stem} "${_prefixes}" )
 add_includes_libs_to_target ( ${BUILD_PROGRAM} ${_stem} "${_prefixes}" )
