working compiled changed config and cmakelists for mddft

--- a/examples/mddft/CMakeLists.txt
+++ b/examples/mddft/CMakeLists.txt
@@ -25,7 +25,8 @@ set ( BUILD_PROGRAM test${PROJECT_NAME} )
 set ( _desired_suffix cpp )
 
 ##  ===== For most examples you should not need to modify anything BELOW this line =====
-LIST (APPEND LIBS_FOR_CUDA nvrtc )
+LIST (APPEND ADDL_COMPILE_FLAGS -fpermissive )
+LIST (APPEND LIBS_FOR_CUDA nvrtc cuda)
 
 if ( ${_codegen} STREQUAL "HIP" )
     set_source_files_properties ( ${BUILD_PROGRAM}.${_desired_suffix} PROPERTIES LANGUAGE CXX )
