working prototype FFTXJIT

--- a/examples/mddft/CMakeLists.txt
+++ b/examples/mddft/CMakeLists.txt
@@ -25,7 +25,7 @@ set ( BUILD_PROGRAM test${PROJECT_NAME} )
 set ( _desired_suffix cpp )
 
 ##  ===== For most examples you should not need to modify anything BELOW this line =====
-##LIST (APPEND ADDL_COMPILE_FLAGS -fpermissive )
+LIST (APPEND ADDL_COMPILE_FLAGS -g -fpermissive )
 LIST (APPEND LIBS_FOR_CUDA nvrtc cuda)
 
 if ( ${_codegen} STREQUAL "HIP" )
