Only build testjithip when HIP is specified

--- a/examples/mddft/CMakeLists.txt
+++ b/examples/mddft/CMakeLists.txt
@@ -16,7 +16,12 @@ project ( mddft ${_lang_add} ${_lang_base} )
 
 set ( _stem fftx )
 set ( _prefixes  )
-set ( BUILD_PROGS test${PROJECT_NAME} testjithip )
+set ( BUILD_PROGS test${PROJECT_NAME} )
+ 
+##  testjithip is specific to HIP code [for now], only build when target is HIP
+if ( ${_codegen} STREQUAL "HIP" )
+    list ( APPEND BUILD_PROGS testjithip )
+endif ()
 
 ##  One .cpp file is coded with device_macros and should build for CUDA & HIP
 set ( _desired_suffix cpp )
